kubernetes/registry/registry-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
          - containerPort: 5000
        volumeMounts:
          - name: storage
            mountPath: /var/lib/registry
          - name: auth
            mountPath: /auth
            readOnly: true
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: registry-storage
        - name: auth
          secret:
            secretName: registry-auth
