kubernetes/registry/registry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
  namespace: registry 
spec:
  ports:
    - port: 5000
  selector:
    app: registry
